// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseSelect /> renders compact 1`] = `
<div
  className="select_jd2fw5"
>
  <FormInput
    compact={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="arrow_1lvqbjq-o_O-arrow_compact_ib86un"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;

exports[`<BaseSelect /> renders disabled 1`] = `
<div
  className="select_jd2fw5"
>
  <FormInput
    disabled={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="arrow_1lvqbjq-o_O-arrow_disabled_5k6q5e"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;

exports[`<BaseSelect /> renders invalid 1`] = `
<div
  className="select_jd2fw5"
>
  <FormInput
    invalid={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="arrow_1lvqbjq-o_O-arrow_invalid_u10i2o"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;
